// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exports should match snapshot of default export 1`] = `
Array [
  "ActionsAdd",
  "ActionsCoachmarks",
  "ActionsCopy",
  "ActionsDelete",
  "ActionsDownload",
  "ActionsDuplicate",
  "ActionsEdit",
  "ActionsFilter",
  "ActionsGear",
  "ActionsKey",
  "ActionsPrint",
  "ActionsRedo",
  "ActionsRefresh",
  "ActionsRemove",
  "ActionsUndo",
  "ActionsUpload",
  "BatchstatusInprogress",
  "BatchstatusOpen",
  "BatchstatusReconciled",
  "BatchstatusSettle",
  "DescriptiveApps",
  "DescriptiveAssistant",
  "DescriptiveAt",
  "DescriptiveBars",
  "DescriptiveBox",
  "DescriptiveCalendar",
  "DescriptiveCart",
  "DescriptiveCategory",
  "DescriptiveClock",
  "DescriptiveCloud",
  "DescriptiveComment",
  "DescriptiveConnect",
  "DescriptiveDelivered",
  "DescriptiveDiscussions",
  "DescriptiveDocument1",
  "DescriptiveDocument2",
  "DescriptiveEcoding",
  "DescriptiveEnvelopeOpen",
  "DescriptiveEnvelope",
  "DescriptiveFilter",
  "DescriptiveFolder",
  "DescriptiveHome",
  "DescriptiveInternet",
  "DescriptiveLocation",
  "DescriptiveLock",
  "DescriptivePalette",
  "DescriptivePercent",
  "DescriptivePiechart",
  "DescriptivePresentation",
  "DescriptiveProfile",
  "DescriptiveReceipt",
  "DescriptiveRuler",
  "DescriptiveSkip",
  "DescriptiveSuitcase",
  "DescriptiveTray",
  "InterfaceCard",
  "InterfaceDesktop",
  "InterfaceLaptop",
  "InterfacePage",
  "InterfaceSms",
  "InterfaceTables",
  "MultimediaCall",
  "MultimediaCamera",
  "MultimediaCampaign",
  "MultimediaVideocamera",
  "MultimediaVoice",
  "MultimediaVolume",
  "NavigationArrowBack",
  "NavigationArrowDown",
  "NavigationArrowForward",
  "NavigationArrowLeft",
  "NavigationArrowRight",
  "NavigationArrowSorting",
  "NavigationArrowUp",
  "NavigationChevronBottom",
  "NavigationChevronDoubleLeft",
  "NavigationChevronDoubleRight",
  "NavigationChevronDown",
  "NavigationChevronLeft",
  "NavigationChevronNav",
  "NavigationChevronRight",
  "NavigationChevronTop",
  "NavigationChevronUp",
  "NavigationCircleDown",
  "NavigationCircleLeft",
  "NavigationCircleRight",
  "NavigationCircleUp",
  "NavigationClose",
  "NavigationDragDropDots",
  "NavigationDragDrop",
  "NavigationFirst",
  "NavigationHamburger",
  "NavigationLast",
  "NavigationLess",
  "NavigationLogout",
  "NavigationMenuDots",
  "NavigationPlus",
  "NavigationSearch",
  "NotificationAlert",
  "NotificationError",
  "NotificationInfo",
  "NotificationNote",
  "PaymentAmex",
  "PaymentBank",
  "PaymentBarcode",
  "PaymentBatch",
  "PaymentCardBack",
  "PaymentCash",
  "PaymentCashback",
  "PaymentCharge",
  "PaymentCredit",
  "PaymentCsc",
  "PaymentCvv",
  "PaymentDebit",
  "PaymentInvoice",
  "PaymentMaster",
  "PaymentPay",
  "PaymentPaybycard",
  "PaymentPayment",
  "PaymentRefund",
  "PaymentToken",
  "PaymentWallet",
  "StatusApprove",
  "StatusCheck",
  "StatusDanger",
  "StatusFollow",
  "StatusLike",
  "StatusMoney",
  "StatusRecomend",
  "StatusSpinner",
  "StatusStarFilled",
  "StatusStar",
  "StatusSun",
  "StatusTarget",
  "StatusThumbsdown",
  "StatusThumbsup",
  "StatusTrophy",
  "StatusUnfollow",
]
`;

exports[`Exports should match snapshot of named exports 1`] = `
Array [
  "AbstractIcon",
  "ActionsAdd",
  "ActionsCoachmarks",
  "ActionsCopy",
  "ActionsDelete",
  "ActionsDownload",
  "ActionsDuplicate",
  "ActionsEdit",
  "ActionsFilter",
  "ActionsGear",
  "ActionsKey",
  "ActionsPrint",
  "ActionsRedo",
  "ActionsRefresh",
  "ActionsRemove",
  "ActionsUndo",
  "ActionsUpload",
  "BatchstatusInprogress",
  "BatchstatusOpen",
  "BatchstatusReconciled",
  "BatchstatusSettle",
  "DescriptiveApps",
  "DescriptiveAssistant",
  "DescriptiveAt",
  "DescriptiveBars",
  "DescriptiveBox",
  "DescriptiveCalendar",
  "DescriptiveCart",
  "DescriptiveCategory",
  "DescriptiveClock",
  "DescriptiveCloud",
  "DescriptiveComment",
  "DescriptiveConnect",
  "DescriptiveDelivered",
  "DescriptiveDiscussions",
  "DescriptiveDocument1",
  "DescriptiveDocument2",
  "DescriptiveEcoding",
  "DescriptiveEnvelope",
  "DescriptiveEnvelopeOpen",
  "DescriptiveFilter",
  "DescriptiveFolder",
  "DescriptiveHome",
  "DescriptiveInternet",
  "DescriptiveLocation",
  "DescriptiveLock",
  "DescriptivePalette",
  "DescriptivePercent",
  "DescriptivePiechart",
  "DescriptivePresentation",
  "DescriptiveProfile",
  "DescriptiveReceipt",
  "DescriptiveRuler",
  "DescriptiveSkip",
  "DescriptiveSuitcase",
  "DescriptiveTray",
  "InterfaceCard",
  "InterfaceDesktop",
  "InterfaceLaptop",
  "InterfacePage",
  "InterfaceSms",
  "InterfaceTables",
  "MultimediaCall",
  "MultimediaCamera",
  "MultimediaCampaign",
  "MultimediaVideocamera",
  "MultimediaVoice",
  "MultimediaVolume",
  "NavigationArrowBack",
  "NavigationArrowDown",
  "NavigationArrowForward",
  "NavigationArrowLeft",
  "NavigationArrowRight",
  "NavigationArrowSorting",
  "NavigationArrowUp",
  "NavigationChevronBottom",
  "NavigationChevronDoubleLeft",
  "NavigationChevronDoubleRight",
  "NavigationChevronDown",
  "NavigationChevronLeft",
  "NavigationChevronNav",
  "NavigationChevronRight",
  "NavigationChevronTop",
  "NavigationChevronUp",
  "NavigationCircleDown",
  "NavigationCircleLeft",
  "NavigationCircleRight",
  "NavigationCircleUp",
  "NavigationClose",
  "NavigationDragDrop",
  "NavigationDragDropDots",
  "NavigationFirst",
  "NavigationHamburger",
  "NavigationLast",
  "NavigationLess",
  "NavigationLogout",
  "NavigationMenuDots",
  "NavigationPlus",
  "NavigationSearch",
  "NotificationAlert",
  "NotificationError",
  "NotificationInfo",
  "NotificationNote",
  "PaymentAmex",
  "PaymentBank",
  "PaymentBarcode",
  "PaymentBatch",
  "PaymentCardBack",
  "PaymentCash",
  "PaymentCashback",
  "PaymentCharge",
  "PaymentCredit",
  "PaymentCsc",
  "PaymentCvv",
  "PaymentDebit",
  "PaymentInvoice",
  "PaymentMaster",
  "PaymentPay",
  "PaymentPaybycard",
  "PaymentPayment",
  "PaymentRefund",
  "PaymentToken",
  "PaymentWallet",
  "StatusApprove",
  "StatusCheck",
  "StatusDanger",
  "StatusFollow",
  "StatusLike",
  "StatusMoney",
  "StatusRecomend",
  "StatusSpinner",
  "StatusStar",
  "StatusStarFilled",
  "StatusSun",
  "StatusTarget",
  "StatusThumbsdown",
  "StatusThumbsup",
  "StatusTrophy",
  "StatusUnfollow",
  "default",
  "iconSizes",
]
`;
